--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "poly-fluid-sizing": "^1.1.0",
     "rxjs": "^5.5.6",
+    "sass-rem": "^2.0.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -33,6 +35,9 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "eslint": "^4.19.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-angular": "^3.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
