--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "postinstall": "cd server && npm install"
+    "postinstall": "cd server && npm install && npm start"
   }
 }
