--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "serve-favicon": "~2.4.5"
+    "express": "~4.15.5"
   }
 }
